<resources>
    <string name="app_name">XRSC</string>
    <string name="action_settings">Settings</string>
    <string name="defaultServer">192.168.4.1</string>
    <string name="textSendButton">Animations</string>
    <string name="textStatusDefault">Not connected</string>
    <string name="textOpenButton">Images</string>
    <string name="textImageView">Road Sign Image</string>
    <string name="connectionText">Connection with Road Sign</string>
    <string name="rsOnOffText">Road Sign switch Off</string>
    <string name="delayText">Delay</string>
    <string name="secondsText">10 s</string>
    <string name="brightnessText">Brightness</string>
    <string name="percentText">30 %</string>
    <string name="textSlideButton">Send as Slide</string>
    <string name="textOffButton">OFF</string>
    <string name="textAppStatus">App status</string>
    <string name="textOK">OK</string>
    <string name="textStatusOk">App is running normally.</string>
    <string name="textStatusExpired">App trial period expired! Please enter serial number.</string>
</resources>
