<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oldvers.rsc.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/idRelativeLayout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/idServer"
            android:layout_gravity="left"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_alignWithParentIfMissing="false"
            android:text="@string/defaultServer"
            android:layout_toStartOf="@+id/idClientSwitch"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idClientSwitch"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:enabled="true"
            android:checked="false"
            android:layout_centerVertical="true"
            android:textOn="ON"
            android:textOff="OFF"
            />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/idRelativeLayout"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/idRelativeLayout"
        android:padding="5dp"
        android:id="@+id/idLinearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textStatusDefault"
            android:id="@+id/idStatusText"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idSeekBar"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="30"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textOpenButton"
            android:id="@+id/idOpenButton"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickListenerOpenButton"/>

        <ImageView
            android:layout_width="192dp"
            android:layout_height="128dp"
            android:id="@+id/idImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_road_sign"
            android:fitsSystemWindows="false"
            android:cropToPadding="false"
            android:adjustViewBounds="false"
            android:contentDescription="@string/textImageView"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSendButton"
            android:id="@+id/idSendButton"
            android:layout_gravity="top"
            android:textAlignment="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="onClickListenerSendButton"/>
    </LinearLayout>

</RelativeLayout>
